styles.css
html {
  box-sizing: border-box;
}

*,
*::after,
*::before {
  box-sizing: inherit;
  border: 0;
  padding: 0;
  margin: 0;
}

body {
  width: 100dvw;
  height: 100dvh;
  display: grid;
  place-items: center;
  background-color: plum;
}

main {
  font-family: Arial, Helvetica, sans-serif;
  outline: 3px solid;
  background-color: #fff;
  border-radius: 10px;
  padding: 10px 10px;
  display: flex;
  flex-direction: column;
}

main > h1 {
  text-align: center;
  /* text-decoration: underline; */
  margin-bottom: 30px;
  border-bottom: 2px solid;
}

.grid-input,
.color-input,
button {
  margin-bottom: 10px;
}

.grid-input {
  max-width: 300px;
  accent-color: slateblue;
}
.colors-div {
  display: grid;
  grid-template-columns: 1fr 70px;
  align-items: center;
}
.pen-color-input,
.grid-color-input {
  background-color: transparent;
  height: 50px;
  width: 50px;
}

.reset-grid-button,
.grid-line-button {
  height: 30px;
  border-radius: 5px;
  background-color: slateblue;
  color: #fff;
}

.board-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  width: 300px;
  height: 300px;
  border: 1px solid black;
  border-radius: 5px;
  overflow: hidden;
  margin-bottom: 10px;
}

.grid-items {
  outline: 1px gray;
}

